--- a/modality-event/modality-event-frontoffice-activity-audiorecordings-plugin/src/main/webfx/css/modality-event-frontoffice-activities-audiorecordings-javafx@main.css
+++ b/modality-event/modality-event-frontoffice-activity-audiorecordings-plugin/src/main/webfx/css/modality-event-frontoffice-activities-audiorecordings-javafx@main.css
@@ -13,11 +13,6 @@
     -fx-text-alignment: left; /* Aligns text */
 }
 
-.audio-library .description {
-    -fx-pref-width: 450;
-    -fx-max-width: 450;
-}
-
 .list-tracks-title {
     -fx-font-family: "Poppins";
     -fx-font-weight: bold;
@@ -27,7 +22,6 @@
 }
 
 .bottom-border {
-    -fx-padding: 0 10 20 -50;
     -fx-border-color: transparent transparent #4A4748 transparent; -fx-border-width: 0 0 0.2 0;
 }
 
