--- a/modality-event/modality-event-frontoffice-activity-audiorecordings-plugin/src/main/webfx/css/modality-event-frontoffice-activities-audiorecordings-web@main.css
+++ b/modality-event/modality-event-frontoffice-activity-audiorecordings-plugin/src/main/webfx/css/modality-event-frontoffice-activities-audiorecordings-web@main.css
@@ -27,14 +27,7 @@
 }
 
 .bottom-border {
-    margin-top: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
     border-color:     transparent transparent #e6e6e6 transparent;
     border-width: 0 0 1px 0; /* Border width translated to px */
     border-style: solid;
-}
-
-.bottom-border > fx-children {
-    margin-top: -10px;
 }
